<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home"
    tools:context=".PostItemActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/yellow"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/time_of_post"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <ImageView
        android:id="@+id/earth"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/icon_earth"
        app:layout_constraintTop_toTopOf="@id/hours"
        app:layout_constraintStart_toEndOf="@id/hours"
        app:layout_constraintBottom_toBottomOf="@id/hours"
         />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:src="@drawable/icon_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text1"
        app:layout_constraintTop_toTopOf="@id/text1"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:autoLink="web"
        android:textColorLink="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/react"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post"
        android:src="@drawable/reacts"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/number_react"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_react"
        app:layout_constraintStart_toEndOf="@id/react"
        app:layout_constraintTop_toTopOf="@id/react"
        app:layout_constraintBottom_toBottomOf="@id/react"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="10dp"
        android:layout_height="10dp"
android:src="@drawable/down_arrow"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/number_react"
        app:layout_constraintBottom_toBottomOf="@id/number_react"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_min"
        android:layout_width="15dp"

        android:layout_height="15dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/yellow"
        app:layout_constraintBottom_toBottomOf="@id/arrow"
        app:layout_constraintEnd_toStartOf="@id/arrow"
        app:layout_constraintTop_toTopOf="@id/arrow" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_share"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/circle_min"
        app:layout_constraintTop_toTopOf="@id/circle_min"
        app:layout_constraintBottom_toBottomOf="@id/circle_min"
        android:layout_marginRight="10dp"
        />
    
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/number_react"
        android:background="@color/cardview_dark_background"
        android:layout_margin="10dp"


        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/separator">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/like"
            android:textColor="@color/black"
            app:icon="@drawable/like"
            app:iconSize="20dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/comment"
            android:textColor="@color/black"
            app:icon="@drawable/comment"
            app:iconSize="20dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/share"
            android:textColor="@color/black"
            app:icon="@drawable/share"
            app:iconSize="20dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="screen"

            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="Go to Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>